--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,9 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdk rootProject.compileSdkVersion
-
+    dataBinding {
+        enabled = true
+    }
     defaultConfig {
         applicationId "com.example.series_collector"
         minSdkVersion rootProject.minSdkVersion
