--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,14 @@ buildscript {
         appCompatVersion = '1.4.1'
         gradleVersion = '7.2.0'
         kotlinVersion = '1.6.21'
+        ktxVersion = '1.7.0'
         constraintLayoutVersion = '2.1.3'
         coreTestingVersion = '2.1.0'
         coroutinesVersion = "1.6.1"
+        navigationVersion = '2.4.1'
+        materialVersion = '1.5.0'
+        roomVersion = '2.4.2'
+        hiltVersion = '2.41'
     }
 
     repositories {
@@ -25,6 +30,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
     }
 }
 
