--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,13 @@ buildscript {
         coreTestingVersion = '2.1.0'
         coroutinesVersion = "1.6.1"
         navigationVersion = '2.4.1'
-        materialVersion = '1.5.0'
+        materialVersion = '1.2.1'
         roomVersion = '2.4.2'
         hiltVersion = '2.41'
+        googleVersion = '4.3.15'
+        fireBaseVersion = '31.5.0'
+        workVersion = '2.7.1'
+
     }
 
     repositories {
@@ -29,6 +33,7 @@ buildscript {
 
     dependencies {
         classpath "com.android.tools.build:gradle:$gradleVersion"
+        classpath "com.google.gms:google-services:$googleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
     }
