--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,6 @@ dependencies {
 
     implementation platform("com.google.firebase:firebase-bom:$fireBaseVersion")
     implementation 'com.google.firebase:firebase-firestore-ktx'
-
     implementation "androidx.work:work-runtime-ktx:$rootProject.workVersion"
     implementation "androidx.core:core-ktx:$rootProject.ktxVersion"
     implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
@@ -52,7 +51,8 @@ dependencies {
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
     implementation "com.google.dagger:hilt-android:$rootProject.hiltVersion"
-
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycleVersion"
     //test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
