--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
         googleVersion = '4.3.15'
         fireBaseVersion = '31.5.0'
         workVersion = '2.7.1'
+        lifecycleVersion = '2.4.1'
 
     }
 
