--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+GOOGLE_API_KEY=AIzaSyAAvn5wRrUVt6OErNGYieF52Uhs9CW1Hgs
