--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ buildscript {
         glideVersion = '4.13.1'
         retrofitVersion = '2.9.0'
         okhttpLoggingVersion = '4.9.3'
+        pagingVersion = '3.1.1'
 
     }
 
@@ -40,6 +41,8 @@ buildscript {
         classpath "com.google.gms:google-services:$googleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+
     }
 }
 
