#2 홈 화면 새로고침 기능  추가, Detail 화면 로딩바 제거

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
     implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
     implementation "androidx.paging:paging-runtime-ktx:$rootProject.pagingVersion"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$rootProject.freshLayoutVersion"
 
     // WorkManager Hilt
     implementation 'androidx.hilt:hilt-work:1.0.0'
