feature: 스플래시 추가 및 코드 정리

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SeriesCollector"
         tools:targetApi="31">
+
         <activity
-            android:name=".feature.main.MainActivity"
+            android:name=".ui.splash.SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.SeriesCollector.NoActionBar">
             <intent-filter>
@@ -28,11 +29,11 @@
             </intent-filter>
         </activity>
 
-        <provider
-            android:name="androidx.startup.InitializationProvider"
-            android:authorities="${applicationId}.androidx-startup"
-            tools:node="remove">
-        </provider>
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.SeriesCollector.NoActionBar">
+        </activity>
 
     </application>
 
