--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,9 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
     implementation "androidx.paging:paging-runtime-ktx:$rootProject.pagingVersion"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:$rootProject.freshLayoutVersion"
+
     implementation 'androidx.hilt:hilt-work:1.0.0'
+    implementation "androidx.startup:startup-runtime:1.0.0-alpha01"
 
     //test
     testImplementation 'junit:junit:4.13.2'
