--- a/preference/build.gradle
+++ b/preference/build.gradle
@@ -1,11 +1,11 @@
-apply plugin: 'kotlin-android'
 apply plugin: 'com.android.library'
+apply plugin: 'org.jetbrains.kotlin.android'
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'kotlin-kapt'
 
 android {
-    namespace 'com.example.data'
-    compileSdk rootProject.compileSdkVersion
+    namespace 'com.example.preference'
+    compileSdk 33
 
     defaultConfig {
         minSdk 24
@@ -30,18 +30,12 @@ android {
 }
 
 dependencies {
-    implementation project(":preference")
-    implementation project(':database')
-    implementation project(":network")
     implementation project(":model")
 
     kapt "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
     kapt("androidx.hilt:hilt-compiler:1.0.0")
 
     implementation "com.google.dagger:hilt-android:$rootProject.hiltVersion"
-    implementation "androidx.paging:paging-runtime-ktx:$rootProject.pagingVersion"
-    implementation platform("com.google.firebase:firebase-bom:$fireBaseVersion")
-    implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.appcompat:appcompat:1.6.1'
