--- a/settings.gradle
+++ b/settings.gradle
@@ -17,5 +17,6 @@ include ':app'
 include ':data'
 include ':network'
 include ':model'
-include ':local'
+include ':database'
 include ':worker'
+include ':preference'
