--- a/worker/build.gradle
+++ b/worker/build.gradle
@@ -31,7 +31,7 @@ android {
 
 dependencies {
     implementation project(":model")
-    implementation project(":local")
+    implementation project(':database')
     implementation project(":data")
     implementation project(":network")
 
